{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 441,
  "lineage": "8a415ebd-fd9d-58e7-cc02-79df0105e3be",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "my_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e194adfb2d91bd05",
            "public_dns": "ec2-54-158-10-66.compute-1.amazonaws.com",
            "public_ip": "54.158.10.66",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "my-private-web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebfd941bbafe70c6",
            "arn": "arn:aws:ec2:us-east-1:637423185685:instance/i-0f827794333dae0bb",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f827794333dae0bb",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d8ec7af8ad123d98",
            "private_dns": "ip-10-180-0-70.ec2.internal",
            "private_ip": "10.180.0.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-053a467415546bb82",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04e7563a01577b2f5",
            "tags": {
              "Name": "app-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02ecc253961b04c0a"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-ec2",
            "aws_security_group.my-private-app-sg",
            "aws_subnet.my-private-app-subnet-1",
            "aws_subnet.my-private-app-subnet-2",
            "aws_vpc.demo-app"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ebfd941bbafe70c6",
            "arn": "arn:aws:ec2:us-east-1:637423185685:instance/i-0b4b8c81e8eda246d",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4b8c81e8eda246d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssh-ec2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05035111ad03d38aa",
            "private_dns": "ip-10-180-0-126.ec2.internal",
            "private_ip": "10.180.0.126",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "volume_id": "vol-0995f6cf31d129ed4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00199a1535fbba33e",
            "tags": {
              "Name": "app-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-02ecc253961b04c0a"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh-ec2",
            "aws_security_group.my-private-app-sg",
            "aws_subnet.my-private-app-subnet-1",
            "aws_subnet.my-private-app-subnet-2",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "three-tier-web-ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:internet-gateway/igw-087be34e86478e38d",
            "id": "igw-087be34e86478e38d",
            "owner_id": "637423185685",
            "tags": {
              "Name": "three-tier-web-ig"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wordpress-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423185685:loadbalancer/app/wordpress-alb/4f631aeca9f1f914",
            "arn_suffix": "app/wordpress-alb/4f631aeca9f1f914",
            "dns_name": "wordpress-alb-893800838.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423185685:loadbalancer/app/wordpress-alb/4f631aeca9f1f914",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wordpress-alb",
            "security_groups": [
              "sg-0eb84a5a5df8f6db3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-032169961708ad5ad"
              },
              {
                "subnet_id": "subnet-0876be37865e7bd73"
              }
            ],
            "subnets": [
              "subnet-032169961708ad5ad",
              "subnet-0876be37865e7bd73"
            ],
            "vpc_id": "vpc-0717122958a64cc8b",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.public-alb-sg",
            "aws_subnet.my-public-web-subnet-1",
            "aws_subnet.my-public-web-subnet-2",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "public-alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423185685:listener/app/wordpress-alb/4f631aeca9f1f914/30debded75c18923",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423185685:targetgroup/wordpress-alb/c5054fa557188f83",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423185685:listener/app/wordpress-alb/4f631aeca9f1f914/30debded75c18923",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:637423185685:loadbalancer/app/wordpress-alb/4f631aeca9f1f914",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.wordpress-alb",
            "aws_lb_target_group.public-subnet-web-load-balancer",
            "aws_security_group.public-alb-sg",
            "aws_subnet.my-public-web-subnet-1",
            "aws_subnet.my-public-web-subnet-2",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "public-subnet-web-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:637423185685:targetgroup/wordpress-alb/c5054fa557188f83",
            "arn_suffix": "targetgroup/wordpress-alb/c5054fa557188f83",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423185685:targetgroup/wordpress-alb/c5054fa557188f83",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "wordpress-alb",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app-1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423185685:targetgroup/wordpress-alb/c5054fa557188f83-20240927100837509500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423185685:targetgroup/wordpress-alb/c5054fa557188f83",
            "target_id": "i-0f827794333dae0bb"
          },
          "dependencies": [
            "aws_instance.my-private-web-subnet",
            "aws_key_pair.ssh-ec2",
            "aws_lb_target_group.public-subnet-web-load-balancer",
            "aws_security_group.my-private-app-sg",
            "aws_subnet.my-private-app-subnet-1",
            "aws_subnet.my-private-app-subnet-2",
            "aws_vpc.demo-app"
          ]
        },
        {
          "index_key": "app-2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:637423185685:targetgroup/wordpress-alb/c5054fa557188f83-20240927100837222200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:637423185685:targetgroup/wordpress-alb/c5054fa557188f83",
            "target_id": "i-0b4b8c81e8eda246d"
          },
          "dependencies": [
            "aws_instance.my-private-web-subnet",
            "aws_key_pair.ssh-ec2",
            "aws_lb_target_group.public-subnet-web-load-balancer",
            "aws_security_group.my-private-app-sg",
            "aws_subnet.my-private-app-subnet-1",
            "aws_subnet.my-private-app-subnet-2",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web-nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e194adfb2d91bd05",
            "id": "nat-08993a9a892d0db83",
            "network_interface_id": "eni-0bf053ead8fb1ecb2",
            "private_ip": "10.180.0.29",
            "public_ip": "54.158.10.66",
            "subnet_id": "subnet-0876be37865e7bd73",
            "tags": {
              "Name": "web-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-private-app-routetable-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-01f9941553b2fdc38",
            "owner_id": "637423185685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08993a9a892d0db83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-app-routetable-1"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.web-nat-gateway",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-private-db-routetable-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0aab932dbd8088220",
            "owner_id": "637423185685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-08993a9a892d0db83",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-private-db-routetable-1"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.web-nat-gateway",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my-public-web-routetable-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f2b6a4aa6bafd192",
            "owner_id": "637423185685",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087be34e86478e38d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "my-public-web-routetable-1"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.three-tier-web-ig",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable-subnet-app-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080bb98367901635b",
            "route_table_id": "rtb-01f9941553b2fdc38",
            "subnet_id": "subnet-04e7563a01577b2f5"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.web-nat-gateway",
            "aws_route_table.my-private-app-routetable-1",
            "aws_subnet.my-private-app-subnet-1",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable-subnet-app-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffcf5cbeb2d7818a",
            "route_table_id": "rtb-01f9941553b2fdc38",
            "subnet_id": "subnet-00199a1535fbba33e"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.web-nat-gateway",
            "aws_route_table.my-private-app-routetable-1",
            "aws_subnet.my-private-app-subnet-2",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable-subnet-db-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021ec64d47e467675",
            "route_table_id": "rtb-0aab932dbd8088220",
            "subnet_id": "subnet-0877f60f8392e77e8"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.web-nat-gateway",
            "aws_route_table.my-private-db-routetable-1",
            "aws_subnet.my-private-db-subnet-1",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable-subnet-db-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cec2822c5d415f81",
            "route_table_id": "rtb-0aab932dbd8088220",
            "subnet_id": "subnet-055f894fc875271e6"
          },
          "dependencies": [
            "aws_eip.my_eip",
            "aws_nat_gateway.web-nat-gateway",
            "aws_route_table.my-private-db-routetable-1",
            "aws_subnet.my-private-db-subnet-2",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable-subnet-web-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0171acdd04dbbaf2a",
            "route_table_id": "rtb-0f2b6a4aa6bafd192",
            "subnet_id": "subnet-0876be37865e7bd73"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-web-ig",
            "aws_route_table.my-public-web-routetable-1",
            "aws_subnet.my-public-web-subnet-1",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "routetable-subnet-web-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e251f977ab2c90c",
            "route_table_id": "rtb-0f2b6a4aa6bafd192",
            "subnet_id": "subnet-032169961708ad5ad"
          },
          "dependencies": [
            "aws_internet_gateway.three-tier-web-ig",
            "aws_route_table.my-public-web-routetable-1",
            "aws_subnet.my-public-web-subnet-2",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my-private-app-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:security-group/sg-02ecc253961b04c0a",
            "description": "Allow ssh inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02ecc253961b04c0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-private-app-sg",
            "name_prefix": null,
            "owner_id": "637423185685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-private-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:security-group/sg-0eb84a5a5df8f6db3",
            "description": "Allow ssh inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0eb84a5a5df8f6db3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public-alb-sg",
            "name_prefix": null,
            "owner_id": "637423185685",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "my-private-app-sg-alg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow ALB traffic from the application security group",
            "from_port": 80,
            "id": "sgrule-1783398672",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02ecc253961b04c0a",
            "self": false,
            "source_security_group_id": "sg-0eb84a5a5df8f6db3",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.my-private-app-sg",
            "aws_security_group.public-alb-sg",
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-app-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:subnet/subnet-04e7563a01577b2f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.180.0.64/27",
            "id": "subnet-04e7563a01577b2f5",
            "map_public_ip_on_launch": false,
            "owner_id": "637423185685",
            "tags": {
              "Name": "my-private-app-subnet-1"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-app-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:subnet/subnet-00199a1535fbba33e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.180.0.96/27",
            "id": "subnet-00199a1535fbba33e",
            "map_public_ip_on_launch": false,
            "owner_id": "637423185685",
            "tags": {
              "Name": "my-private-app-subnet-2"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-db-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:subnet/subnet-0877f60f8392e77e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.180.0.128/27",
            "id": "subnet-0877f60f8392e77e8",
            "map_public_ip_on_launch": false,
            "owner_id": "637423185685",
            "tags": {
              "Name": "my-private-db-subnet-1"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-db-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:subnet/subnet-055f894fc875271e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.180.0.160/27",
            "id": "subnet-055f894fc875271e6",
            "map_public_ip_on_launch": false,
            "owner_id": "637423185685",
            "tags": {
              "Name": "my-private-db-subnet-2"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-web-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:subnet/subnet-0876be37865e7bd73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.180.0.0/27",
            "id": "subnet-0876be37865e7bd73",
            "map_public_ip_on_launch": false,
            "owner_id": "637423185685",
            "tags": {
              "Name": "my-public-web-subnet-1"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-web-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:subnet/subnet-032169961708ad5ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.180.0.32/27",
            "id": "subnet-032169961708ad5ad",
            "map_public_ip_on_launch": false,
            "owner_id": "637423185685",
            "tags": {
              "Name": "my-public-web-subnet-2"
            },
            "vpc_id": "vpc-0717122958a64cc8b"
          },
          "dependencies": [
            "aws_vpc.demo-app"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423185685:vpc/vpc-0717122958a64cc8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.180.0.0/24",
            "default_network_acl_id": "acl-026e222aea0f8d20e",
            "default_route_table_id": "rtb-0a64a68adee9b2afd",
            "default_security_group_id": "sg-0907ef0c03c59295a",
            "dhcp_options_id": "dopt-028fb8ade756c404c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0717122958a64cc8b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0a64a68adee9b2afd",
            "owner_id": "637423185685",
            "tags": {
              "Name": "three-tier-app"
            }
          }
        }
      ]
    }
  ]
}